{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 62,
  "lineage": "835e61aa-7426-a3da-c531-96c9936036f1",
  "resources": [
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bositon_host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:789214289931:instance/i-03fc32fc140575dd2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fc32fc140575dd2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webkey1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b78b731b65c1e37",
            "private_dns": "ip-192-168-0-62.ap-south-1.compute.internal",
            "private_ip": "192.168.0.62",
            "public_dns": "ec2-13-233-231-204.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.231.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08c4aa51cac9f2aca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5387c090803e2b0",
            "tags": {
              "Name": "bositon_host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bee00495c997a079"
            ]
          },
          "dependencies": [
            "module.aws_code.aws_key_pair.webkey1",
            "module.aws_code.aws_security_group.bositon_ssh",
            "module.aws_code.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0415c57c5a21a4d71",
            "arn": "arn:aws:ec2:ap-south-1:789214289931:instance/i-0b61cbb43e07a4a13",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b61cbb43e07a4a13",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "12345",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3ff014a466de39f",
            "private_dns": "ip-192-168-1-142.ap-south-1.compute.internal",
            "private_ip": "192.168.1.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-030183d1e9c0ce2b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cca42aea59786bf7",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01f9cf5251144ae81",
              "sg-043a3e52083690ded"
            ]
          },
          "dependencies": [
            "module.aws_code.aws_key_pair.webkey1",
            "module.aws_code.aws_security_group.sql_bositon_ssh",
            "module.aws_code.aws_security_group.sql_web",
            "module.aws_code.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f37a73ce5f0d08fc",
            "arn": "arn:aws:ec2:ap-south-1:789214289931:instance/i-01d65469a56c7c776",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d65469a56c7c776",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webkey1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074f6f379d6fb64fd",
            "private_dns": "ip-192-168-0-25.ap-south-1.compute.internal",
            "private_ip": "192.168.0.25",
            "public_dns": "ec2-15-206-116-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.116.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d8f6394f172dc1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05ee4f5f151af15d2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5387c090803e2b0",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ee4f5f151af15d2"
            ]
          },
          "dependencies": [
            "module.aws_code.aws_key_pair.webkey1",
            "module.aws_code.aws_security_group.public",
            "module.aws_code.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "int_gate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:internet-gateway/igw-0933a29ea536c912e",
            "id": "igw-0933a29ea536c912e",
            "owner_id": "789214289931",
            "tags": {
              "Name": "web_gate"
            },
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0211b259630dd96d1",
            "owner_id": "789214289931",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0933a29ea536c912e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_internet_gateway.int_gate",
            "module.aws_code.aws_subnet.public_subnet",
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04214d9d7b5c00e4e",
            "route_table_id": "rtb-0211b259630dd96d1",
            "subnet_id": "subnet-0c5387c090803e2b0"
          },
          "dependencies": [
            "module.aws_code.aws_internet_gateway.int_gate",
            "module.aws_code.aws_route_table.public_route_table",
            "module.aws_code.aws_subnet.public_subnet",
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bositon_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:security-group/sg-0bee00495c997a079",
            "description": "Allow ssh bositon inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bee00495c997a079",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bositon_ssh",
            "name_prefix": null,
            "owner_id": "789214289931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bositon_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_subnet.public_subnet",
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:security-group/sg-05ee4f5f151af15d2",
            "description": "public_subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ee4f5f151af15d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_subnet",
            "name_prefix": null,
            "owner_id": "789214289931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_subnet.public_subnet",
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sql_bositon_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:security-group/sg-01f9cf5251144ae81",
            "description": "Allow ssh only from bositon",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f9cf5251144ae81",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bee00495c997a079"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "only_ssh_sql_bositon",
            "name_prefix": null,
            "owner_id": "789214289931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sql_bositon_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_security_group.bositon_ssh",
            "module.aws_code.aws_subnet.public_subnet",
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sql_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:security-group/sg-043a3e52083690ded",
            "description": "Allow only sql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043a3e52083690ded",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow_icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-05ee4f5f151af15d2"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "mysql_port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ee4f5f151af15d2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sql_web",
            "name_prefix": null,
            "owner_id": "789214289931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sql_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_security_group.public",
            "module.aws_code.aws_subnet.public_subnet",
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:subnet/subnet-0cca42aea59786bf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0cca42aea59786bf7",
            "map_public_ip_on_launch": false,
            "owner_id": "789214289931",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:subnet/subnet-0c5387c090803e2b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0c5387c090803e2b0",
            "map_public_ip_on_launch": true,
            "owner_id": "789214289931",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-089abdf42a82ac778"
          },
          "dependencies": [
            "module.aws_code.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_code",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:789214289931:vpc/vpc-089abdf42a82ac778",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e81ded970dec4fdd",
            "default_route_table_id": "rtb-00cd65086ba70ed5d",
            "default_security_group_id": "sg-0f91a37fdf02f346f",
            "dhcp_options_id": "dopt-117e867a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-089abdf42a82ac778",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00cd65086ba70ed5d",
            "owner_id": "789214289931",
            "tags": {
              "Name": "web_vpc"
            }
          }
        }
      ]
    }
  ]
}